Update packages. Fix scrollbar in Combobox

--- a/svyStyleGuide/medias/svyStyleGuide.less
+++ b/svyStyleGuide/medias/svyStyleGuide.less
@@ -22,3 +22,9 @@
 	padding-left:5px;
 	padding-right: 5px;
 }
+
+.frm-combobox {
+	.inline-group-content {
+		min-height: 34px;
+	}
+}
